--- a/bin/main/templates/categorymanagement.html
+++ b/bin/main/templates/categorymanagement.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category</title>
-    <link rel="stylesheet" href="./category.css">
+    <link rel="stylesheet" href="/static/css/category-admin/category.css">
 </head>
 <body>
     <div class="container">
         <div class="navbar-section">
             <div class="navbar-logo">
-                <div class="navbar-logo-title"><img src="./svg/logo.png" alt="logo"></div>
+                <div class="navbar-logo-title"><img src="/static/svg/sideBar/logo.png" alt="logo"></div>
                 <div class="navbar-logo-title">
                     <h2>GIC CAFE</h2>
                 </div>
@@ -19,29 +19,29 @@
             <div class="navbar-content">
                 <div class="navbar">
                     <div class="navbar-item">
-                        <img src="./svg/table-svgrepo-com.svg" alt="table">
+                        <img src="/static/svg/sideBar/table-svgrepo-com.svg" alt="table">
                         <span>Table</span>
                     </div>
                     <div class="navbar-item">
-                        <img src="./svg/team-18.svg" alt="cashier">
+                        <img src="/static/svg/sideBar/team-18.svg" alt="cashier">
                         <span>Cashier</span>
                     </div>
                     <div class="navbar-item">
-                        <img src="./svg/food-dish-svgrepo-com.svg" alt="food-drink">
+                        <img src="/static/svg/sideBar/food-dish-svgrepo-com.svg" alt="food-drink">
                         <span>Food & Drink</span>
                     </div>
                     <div id="category">
-                        <img src="./svg/layout-grid-svgrepo-com.svg" alt="list">
+                        <img src="/static/svg/sideBar/layout-grid-svgrepo-com.svg" alt="list">
                         <span>Category</span>
                     </div>
                     <div class="navbar-item">
-                        <img src="./svg/order-svgrepo-com.svg" alt="order">
+                        <img src="/static/svg/sideBar/order-svgrepo-com.svg" alt="order">
                         <span>Order</span>
                     </div>
                 </div>
                 <div class="log-out">
                     <div class="navbar-item">
-                        <img src="./svg/log-out.svg" alt="logout">
+                        <img src="/static/svg/sideBar/log-out.svg" alt="logout">
                         <span>Logout</span>
                     </div>
                 </div>
