--- a/bin/main/templates/categorymanagement.html
+++ b/bin/main/templates/categorymanagement.html
@@ -14,7 +14,7 @@
         <div class="all-cashier">
             <div class="category-navbar">
                 <div>
-                    <h2>All Category</h2>
+                    <h2 th:text="${}">All Category</h2>
                     <hr>
                     <p id="iced">Iced</p>
                     <p>Coffee</p>
