--- a/src/main/resources/templates/popup/newProduct.html
+++ b/src/main/resources/templates/popup/newProduct.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>New Cashier Form</title>
+    <title>New Product Form</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <style>
@@ -13,7 +13,7 @@
         input[type="file"] {
             display: none;
         }
-        #fillForm input, select{
+        #fillForm input, select, textarea{
             width: 150px;
         }
 
@@ -45,7 +45,7 @@
         .image-preview img {
             width: 120px;
             height: 120px;
-            border-radius: 100%;
+            border-radius: 10%;
             margin-bottom: 5px;
         }
 
@@ -72,45 +72,70 @@
 
 <body>
     <div id="newCashier">
-        <h2>New Cashier</h2>
+        <h2>New Product</h2>
         <form style="display:flex; flex-direction: column;">
             <!-- <form action="submit_cashier.php" method="POST" enctype="multipart/form-data"> -->
             <div id="heroForm" style="flex-direction: row; width: 620px;">
-                <div id="fillForm" style="padding:1rem; display:flex; flex-direction: column; gap: 1rem;">
+                <div id="fillForm" style="display:flex; flex-direction:column; gap: 1rem; padding:1rem;">
                     <div class="fillInput">
-                        <label for="firstname">First Name:</label>
-                        <input type="text" id="firstname" name="firstname" required>
-                    </div>
-                    <div class="fillInput">
-                        <label for="lastname">Last Name:</label>
-                        <input type="text" id="lastname" name="lastname" required>
-                    </div>
-                    <div class="fillInput">
-                        <label for="sex">Sex:</label>
-                        <select id="sex" name="sex" style="width:158px; padding:1.5px;" required>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="other">Other</option>
+                        <label for="pType">Product Type:</label>
+                        <select id="pType" name="pType" style="width:158px; padding:2px;" required>
+                            <option value="drink">Drink</option>
+                            <option value="food">Food</option>
                         </select>
                     </div>
                     <div class="fillInput">
-                        <label for="dob">Date of Birth:</label>
-                        <input type="date" id="dob" name="dob" style="width:153px; padding:1px;" required>
+                        <label for="pCode">Product Code:</label>
+                        <input type="text" id="pCode" name="pCode" required>
                     </div>
                     <div class="fillInput">
-                        <label for="username">Username:</label>
-                        <input type="text" id="username" name="username" required>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
                     </div>
                     <div class="fillInput">
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" name="password" required>
+                        <label for="category">Category:</label>
+                        <input type="text" id="category" name="category" required>
                     </div>
+                    <div class="fillInput">
+                        <label for="size">Size:</label>
+                        <input type="text" id="size" name="size">
+                    </div>
+                    <div class="fillInput">
+                        <label for="price">Price:</label>
+                        <input type="text" id="price" name="price" required>
+                    </div>
+                    <div class="fillInput">
+                        <label for="note">Note:</label>
+                        <textarea type="text" id="note" name="note" style="width:152px"></textarea>
+                    </div>
+                    <!-- <div style="width:50%; display:flex; flex-direction:column; gap: 11.2px;">
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                    </div>
+
+                    <div style="width:50%; display:flex; flex-direction:column; gap: 8px;">
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                    </div> -->
+                    
+                    
+    
                 </div>
     
     
                 <div id="imgUpload" style="display:flex; flex-direction:column; justify-content:center; align-items:center; padding:1rem;">
                     <div class="image-preview">
-                        <img id="previewImg" src="./images/userIMG.png" alt="Image Preview">
+                        <img id="previewImg" src="./images/imageIcon.png" alt="Image Preview">
                     </div>
                     
                     <label class="file-upload">
@@ -124,7 +149,7 @@
             
             <div style="align-self: self-end; margin-right: 2rem;">
                 <input type="button" value="Cancel" style="color:red; border-color: red; background-color: white; border-radius: 5px; padding:8px">
-                <input type="submit" value="Add Cashier" style="color:white; border-color: rgb(0, 208, 255); background-color: rgb(0, 208, 255); border-radius: 5px; padding:8px">
+                <input type="submit" value="Add Product" style="color:white; border-color: rgb(0, 208, 255); background-color: rgb(0, 208, 255); border-radius: 5px; padding:8px">
             </div>
             
         </form>
